“Unfix” alignment issue in admin options

--- a/sources/style/admin/admin.styl
+++ b/sources/style/admin/admin.styl
@@ -61,13 +61,8 @@
 			font-weight: 400
 			-webkit-font-smoothing: antialiased
 
-
-
 	.cmb-th
 		width: 250px
-
-	.cmb-td // Fix alignment issue that popped up after adding `.cmb2-metabox-description` styles
-		padding: 24px 10px
 
 	.cmb2_select
 		min-width: 200px
